reduced img filesize, fixed alt tag issues, improved contrast ratios in css, updated README.md to add contrast checker resource

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ nav ul li {
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+    background-color: #247DAE; /* #2589bd - original color non-ada compliant*/
 }
 
 .benefit-lead, 
